test/grammar/failing/u_two_superclafers_with_same_subclafer.cfr
// Contains two abstract clafers, one inheriting the other, with the same field.
//
// Expected Output: ??
//
// Current Output:
//   C 
//     X
//     X

abstract A
  X

abstract B : A
  X

C : B

